Updated event handling using Kafka